交易实体类、mapper层、service层

--- a/pom.xml
+++ b/pom.xml
@@ -161,5 +161,7 @@
         <module>easyshop-brand-serviceimpl</module>
         <module>easyshop-web-brand</module>
         <module>easyshop-commons</module>
+        <module>easyshop-order-service</module>
+        <module>easyshop-order-serviceimpl</module>
     </modules>
 </project>
