--- a/easyshop-product-service/pom.xml
+++ b/easyshop-product-service/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>easyshop-brand-service</artifactId>
+    <artifactId>easyshop-product-service</artifactId>
     <dependencies>
         <dependency>
             <artifactId>easyshop-mapper</artifactId>
