--- a/easyshop-orderItem-serviceimpl/pom.xml
+++ b/easyshop-orderItem-serviceimpl/pom.xml
@@ -9,13 +9,27 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>easyshop-order-service</artifactId>
+    <artifactId>easyshop-orderItem-serviceimpl</artifactId>
+    <!-- 实现层引用接口层 -->
     <dependencies>
-        <!-- 接口层引用mapper层 -->
         <dependency>
-            <artifactId>easyshop-mapper</artifactId>
             <groupId>com.easyshop</groupId>
+            <artifactId>easyshop-orderItem-service</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <!-- 单元测试 -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- Spring Boot Dubbo 依赖 -->
+        <dependency>
+            <groupId>io.dubbo.springboot</groupId>
+            <artifactId>spring-boot-starter-dubbo</artifactId>
         </dependency>
 
     </dependencies>
