交易服务可以正常提供

--- a/easyshop-mapper/src/main/resources/jdbc.properties
+++ b/easyshop-mapper/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 user=root
-password=as501226107A.
+password=123456
 driver=com.mysql.jdbc.Driver
 url=jdbc:mysql://127.0.0.1:3306/easyshop?useUnicode=true&characterEncoding=utf-8
